namespaces/live.cloud-platform.service.justice.gov.uk/laa-maat-data-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-maat-data-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-crimeapps"
    cloud-platform.justice.gov.uk/application: "maat-data-api"
    cloud-platform.justice.gov.uk/owner: "Crime Apps Team: laacrimeapps@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-maat-court-data-api"
    cloud-platform.justice.gov.uk/team-name: "laa-crime-apps-team"
    cloud-platform.justice.gov.uk/review-after: ""
